--- a/src/components/homepage/Home.css
+++ b/src/components/homepage/Home.css
@@ -1,3 +1,8 @@
+:root {
+    --primary-text-color: ;
+    --secondary-text-color: #868584;
+}
+
 .home-banner{
     position: relative;
     background-image: url(/src/assets/banner-homepage.jpeg);
@@ -12,5 +17,65 @@
     top: 50%;
     left: 7%;
     color: #FFF9F9;
+}
+
+.browse-container {
+    padding: 8% 2%;
+}
+
+.browse-header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.browse-title {
+    font-size: 5vw;
+    font-weight: 100;
+}
+
+.browse-icons {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: var(--secondary-text-color)
+}
+
+.browse-body-container {
+    padding: 5% 0;
+    display: flex;
+}
+
+.browse-product-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+}
+
+.browse-product-title {
+    font-weight: bold;
+}
+
+.browse-product-description, .browse-product-price {
+
+   color: var(--secondary-text-color),
+
+}
+
+.column {
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    flex: 33%;
+}
+
+.column.one > :nth-child(2), .column.two > :nth-child(1),.column.three > :nth-child(3) {
+    align-items: center;
+}
+
+.column.one > :nth-child(1), .column.one > :nth-child(3), .column.two > :nth-child(2) {
+    align-items: flex-end;
 }
 
