--- a/src/components/homepage/Home.css
+++ b/src/components/homepage/Home.css
@@ -11,6 +11,14 @@
     aspect-ratio: 3.8 / 2;
 }
 
+.home-banner:after{
+    background: rgba(48, 46, 48, 0.062);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    content: "";
+}
+
 .overlay-text {
     position: absolute;
     font-size: 27vw;
