--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,6 +2,12 @@
     color: white;
   }
 
+:root {
+    --primary-text-color: ;
+    --secondary-text-color: #868584;
+}
+ 
+
 .footer-banner-container {
     background-image: url(/src/assets/footer.jpg);
     background-size: cover;
@@ -34,24 +40,90 @@
     font-size: 3vw;
 }
 
+.footer-input {
+    border: none;
+    background-color: transparent;
+    width: 18vw;
+    border-bottom: 1px solid white;
+    padding-bottom: 5%;
+    margin-bottom: 10%;
+    outline: none;
+}
+
 @media (max-width: 480px) {
 
     .footer-title {
         font-size: 6vw;
     }
+
+    .footer-input {
+        width: 125px;
+    }
     
 }
 
-.footer-input {
-    border: none;
-    background-color: transparent;
-    width: 250%;
-    border-bottom: 1px solid white;
-    padding-bottom: 5%;
-    margin-bottom: 10%;
-}
 
 .footer-container {
-    height: 80vh;
-    background-color: red;
+    display: flex;
+    flex-direction: column;
+}
+
+.footer-header {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 3%;
+    padding-left: 3%;
+    padding-right: 10%;
+}
+
+.footer-links, .footer-help-links {
+
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+}
+
+.footer-links a, .footer-help-links a, .footer-credits {
+    color: var(--secondary-text-color);
+}
+
+.footer-title-container {
+    padding-top: 3%;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-banner-title {
+    font-size: 27vw;
+}
+
+@media (max-width: 480px) {
+
+    .footer-header {
+        padding-top: 15%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-links, .footer-help-links, .footer-address, .footer-credits {
+
+        display: flex;
+        flex-direction: row;
+        /* justify-content: center; */
+        gap: 1rem;
+        padding: 2%;
+    
+    }
+
+    .footer-credits {
+        padding-top: 5%;
+        font-size: 3vw;
+    }
+
+    .footer-hide {
+        display: none;
+    }
+    
 }
