--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
 
 .header-container {
     display: flex;
-    background-color: #fff9f9;
+    background-color: #fafafa3f;
     justify-content: space-between;
     align-items: center;
     padding: 15px 3%;
