--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -2,10 +2,7 @@
     color: white;
   }
 
-:root {
-    --primary-text-color: ;
-    --secondary-text-color: #868584;
-}
+
  
 
 .footer-banner-container {
@@ -66,6 +63,7 @@
 .footer-container {
     display: flex;
     flex-direction: column;
+    background-color: #fafafa3f;
 }
 
 .footer-header {
