--- a/src/components/homepage/Home.css
+++ b/src/components/homepage/Home.css
@@ -5,7 +5,7 @@
 
 .home-banner{
     position: relative;
-    background-image: url(/src/assets/banner-homepage.jpeg);
+    background-image: url(/banner-homepage.jpeg);
     background-size: cover;
     width: 100%;
     aspect-ratio: 3.8 / 2;
