--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -3,6 +3,16 @@
   --secondary-text-color: #868584;
 }
 
+@font-face {
+  font-family: hattonmedium;
+  src: url(/src/assets/hatton-medium.otf) format("opentype");;
+}
+
+@font-face {
+  font-family: hattonlight;
+  src: url(/src/assets/hatton-light.otf) format("opentype");;
+}
+
 .about-container {
   display: flex;
   flex-direction: column;
@@ -19,6 +29,8 @@
   font-size: 3.8vw;
   padding: 10% 0;
   z-index: 1;
+  font-family: hattonlight;
+  font-weight: bold;
 }
 
 .about-intro,
