--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -18,6 +18,7 @@ input[name="footer"]::placeholder {
     width: 100%;
     aspect-ratio: 3.8 / 2;
     height: 100%;
+    background-position: center 75%;
     position: relative;
 }
 
