--- a/src/components/homepage/Home.css
+++ b/src/components/homepage/Home.css
@@ -100,6 +100,19 @@
     .browse-body-container {
         display: block;
     }
+
+    .browse-product-container.one, .browse-product-container.three, .browse-product-container.five {
+        align-items: center;
+    }
+    
+    .browse-product-container.two, .browse-product-container.four, .browse-product-container.six, .browse-product-container.nine {
+        align-items: center;
+    }
+
+    .header-container {
+        flex-direction: column;
+        gap: 1rem;
+    }
 }
 
 .product-seven-eight {
