--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -86,6 +86,7 @@
         flex-direction: column;
         gap: 2rem;
         padding: 10%;
+        margin: 5% 0;
     }
 
     .contact-image-container-left, .contact-image-container-right {
