--- a/src/components/homepage/Home.css
+++ b/src/components/homepage/Home.css
@@ -113,6 +113,14 @@
         flex-direction: column;
         gap: 1rem;
     }
+
+    .browse-title {
+        font-size: 6vw;
+    }
+
+    .browse-icons {
+        font-size: 3vw;
+    }
 }
 
 .product-seven-eight {
@@ -136,6 +144,7 @@
     flex-direction: column;
     gap: 1rem;
     min-width: 150px;
+    margin: 20px 0px;
 }
 
 .column.three {
