--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -64,6 +64,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 
 .cart-mid-body {
@@ -74,10 +75,6 @@
 .cart-quantity-info {
   display: flex;
   gap: 1rem;
-}
-
-.cart-quantity-input {
-  width: 5%;
 }
 
 .cart-footer-total,
@@ -95,6 +92,8 @@
 .cart-quantity-minus,
 .cart-quantity-plus {
   cursor: pointer;
+  border: none;
+  background-color: #fefefe;
 }
 
 .cart-remove-title {
@@ -126,7 +125,11 @@
 @media (max-width: 480px) {
   .cart-container {
     width: 100vw;
-    height: 70vh;
+    height: 80vh;
+    border: none;
+    border-bottom: 1px solid black;
+    position: absolute;
+    padding: 5%;
   }
 
   .cart-title,
@@ -137,5 +140,9 @@
   .cart-quantity-info,
   .cart-footer-title {
     font-size: 3.3vw;
+  }
+
+  .cart-remove-title {
+    display: none;
   }
 }
