--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -146,3 +146,23 @@
     display: none;
   }
 }
+
+@media (min-width: 480px) and (max-width: 1080px) {
+  .cart-container {
+    width: 60vw;
+    overflow: auto;
+    border: none;
+    border-bottom: 1px solid black;
+    position: absolute;
+    padding: 5%;
+  }
+
+  .cart-quantity-info,
+  .cart-footer-title {
+    font-size: 1.3vw;
+  }
+
+  .cart-remove-title {
+    display: none;
+  }
+}
