--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -128,3 +128,12 @@
     }
     
 }
+
+@media (min-width: 480px) and (max-width: 1080px) {
+
+    .contact-container {
+        gap: 2rem;
+        margin: 5% 0;
+    }
+
+}
