--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -44,6 +44,21 @@
 
 .header-cart {
     cursor: pointer;
+    display: flex;
+    gap: 0.5rem;
+}
+
+.header-cart-quantity {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F1F1F;
+    color: white;
+    font-size: 1rem;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    font-weight: bold;
 }
 
 @media (max-width: 480px) {
